--- a/SmartPick/My Project/Resources.resx
+++ b/SmartPick/My Project/Resources.resx
@@ -148,4 +148,7 @@
   <data name="logoblack" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\logoblack.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="14650771_10157489166520161_9089602778382653312_n" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\14650771_10157489166520161_9089602778382653312_n.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
