--- a/SmartPick/editMenu.resx
+++ b/SmartPick/editMenu.resx
@@ -120,17 +120,62 @@
   <metadata name="OpenFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="BunifuElipse1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>159, 17</value>
+  </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="BtnBuscar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAADYAAAAqCAYAAAD4Uag9AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALTSURBVGhD7ZnPi9NAFMf15s2jN2/e/A+8eRH/APHm0YPg
+        ScSD4D8giKAgwp4WFr0UBVlRcW8isiKsW3Vtd9NY06ZurbFN02QSfzznO22ybfLqrtLuZpYePtDDZGY+
+        efNm3qQHKIpoPzIT042ZmG7MxGLCXkRuOyKjLvpYgmw7mjjoNx4D4wkvZOczjh2J/RJysGZIFSukF2WP
+        Lj2x6eSCQSfmDTp65yMdvF6cOOgX/QOMt1h0yaqHVNsU9FPOh5vnMNuKNVuCSlVBFxZrdOT2B3YSu8Wh
+        G+/obOEzrZqBetG/Q37OYKwYorReE3T1+Rc6fHNvhdJAEC+6ZAVynvwSZcUQ6vfVgE7dr7Ad54Xjc2Uq
+        fvIp8rMOGTFEClJ4iOssbyA9Vip+Ju8yYlh+eY9UmmN3SzIYvgpK7DEi1pAJefmpzT6cd84UqlSxRVYM
+        Sbgmdz8kJvegDixv9JJ8S8SwfWKn4R7QhdP3TDIHUVNiOA8MefjmbVv/H8py1WH1KTGUKzjZuYa6cetl
+        i7zOIGLNVkjnH1lsQ92Il6MSQ6GJ2o9rqBvY+jdkAa3E8EOXA3k7sE9UZbGsxFC173WBO0lw7UkihhBy
+        jXQD5zCuN0mO4d7DNdQN3ONwSVVijaagcw/2x66ITRCBUmI9N6K55W9sQ9248qxBjjNYiqiKTVnVcw11
+        I64XlRjAoYbDjWusCziysBHCJxGDJWy5B3ShsNKmwEtV90DnqA1HKyOGqnjV9Kf2SW1aoNp4bfToR7Dl
+        MiIGsCRfrXtaXTgfvu2Q2xn9WpURA64bKrm8l1mIFKS+OltLMIYVA4gcPm3ltSJBTmH5pSMVM1YMIOdw
+        ii+tdXNT/SP/F958VxvFcE6l+atYDP6IQEf4fndtaVNFcTdzEONdfFxX/xugDvS7/DyH2ZFYDN5Qt92P
+        Iiro9D8k0wLjOU7/BXPz4vgnMZ2YienGTEwvIvoDUf7dQiRPoCEAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="BtnClose3.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFeSURBVHhe7dwxSgNBFIdx7ey8gSews7TzKJYew1YQK22C
-        hegFBFtbG8FCCWFNyJKsI4Els8FkiTbPnR0JGv83mK/4Vfummo+d7m1UVWXAOsKARBiQCAMSYUAiDEh/
-        wijLD8vGtTn3hcSEe3+fzM37tTBemw/Xj972rwa2efKMxIR7P76fWG9Ut3G0YbimlPOHUh5AWg5vCxu6
-        eQwjayrZ7WRyEGnZPutaXix//hjNG6OGkKbQA2HgH8KARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
-        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEirMPqjpe1c9OQQ0rJ1
-        +mLjt88YRu4WdnRXyEGkJaxcCvu42jC8n1k3r+3ghv1bKdu77NvTYGHT6SyGEeOIK5fC+4I0hfsPUYQe
-        VmEAvxEGJMKARBiQCANCZd91bGVB/aIp6QAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="BtnIngresar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="BtnDespejar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
@@ -441,4 +486,13 @@
         YDAYDAaDwWAwGAwGg8FgMBgMBoPBYDAYDAaDwTjA8P+JU5VzhNji9AAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="BackgroundWorker1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>283, 17</value>
+  </metadata>
+  <metadata name="BunifuElipse2.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>446, 17</value>
+  </metadata>
+  <metadata name="BunifuDragControl1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>570, 17</value>
+  </metadata>
 </root>
